[tool.poetry]
name = "commitmentissues"
version = "0.1.0"
description = ""
authors = ["Jocadbz <joaquimmadureira@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
requests-oauthlib = "^2.0.0"
tweepy = "^4.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
